<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Header Image -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/headerandfooter"
        android:layout_marginTop="-120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- Title TextView -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-75dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:padding="16dp"
        android:layout_below="@id/headerImage"
        android:layout_centerHorizontal="true" />

    <!-- CardView with EditText and Button for City Search -->
    <TextView
        android:id="@+id/citySearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_by_city"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:layout_below="@id/titleTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/citySearchTitle"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/city_or_place_hint"
                android:background="@color/white"
                android:padding="8dp" />

            <Button
                android:id="@+id/buttonSearchCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- CardView with EditTexts and Button for Lat/Long Search -->
    <TextView
        android:id="@+id/latLongSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_by_lat_long"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:layout_below="@id/cardViewCity"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLatLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/latLongSearchTitle"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <EditText
                    android:id="@+id/editTextLatitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/latitude_hint"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:inputType="numberSigned|numberDecimal" />

                <EditText
                    android:id="@+id/editTextLongitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/longitude_hint"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:inputType="numberSigned|numberDecimal" />

                <Button
                    android:id="@+id/buttonSearchLatLong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_button" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Map View Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/cardViewLatLong"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <!-- Footer Image -->
    <ImageView
        android:id="@+id/footerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/headerandfooter"
        android:layout_marginBottom="-125dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
